--- a/Lab 2/task2.html
+++ b/Lab 2/task2.html
@@ -8,7 +8,7 @@
 
     <header>
         <img src="assets/logo.png" alt="Логотип компанії" width="100" height="100">
-        <h1>Лабораторна робота №1 з web-програмування</h1>
+        <h1>Лабораторна робота з веб-технологій</h1>
     </header>
 
     <hr>
