--- a/Lab 5/lab5_2.html
+++ b/Lab 5/lab5_2.html
@@ -37,6 +37,18 @@
                 <td>+</td>
                 <td>+</td>
             </tr>
+             <tr>
+                <td>Підтримка 24/7</td>
+                <td>+</td>
+                <td>+</td>
+                <td>+</td>
+            </tr>
+             <tr>
+                <td>Підтримка 24/7</td>
+                <td>+</td>
+                <td>+</td>
+                <td>+</td>
+            </tr>
             <tr>
                 <td>Персональний менеджер</td>
                 <td></td>
